# yams

./: .gitignore  CMakeLists.txt  README  bladeToBladeCurvatureSolver.h  correlationscax.h  curvaturesolver.h  curvaturesolver_experimental.h  datastorage.h  diffop.h  environment-dev.yml  eqcurvaturesolver.h  gridmetrics.h  gridreader.h  gridrender.h  gridrender_experimental.h  meridionalsolvercase.h  meridionalsolvercase_experiemental.h  meshtools.h  plots.h  solvercasetools.h  yams.cpp  yams.h
baldeToBlade/: bladeToBladeCurvatureSolver.h  bladeToBladeCurvatureSolverPost.h  gridReader.h
doc/: yams.bib  yamstheory.tex
euler2d/: euler2dSolver.h  solverData.h
gas/: gasModel.h
libyams/: CMakeLists.txt  libyamsConfig.cmake.in
libyams/include/yams/: correlationscax.h  curvaturesolver.h  datastorage.h  diffop.h  eqcurvaturesolver.h  gridmetrics.h  gridreader.h  gridrender.h  meridionalsolvercase.h  meshtools.h  plots.h  solvercasetools.h
matrix/: tridiagonal.h
mesh2d/: boundaryCondition.h  cellCenteredStructuredGrid2D.h  cellCenteredStructuredGrid2DConnection.h  cellCenteredStructuredGrid2DSet.h  geom.h  gridhelpers.h
python/: CMakeLists.txt  MANIFEST  post.py  setup.cfg  yamsbind.cpp
python/pyams/: __init__.py
python/src/: yamsbind.cpp
python/tests/: test_mesh.py  test_solver.py
recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
tests/: CMakeLists.txt  b2bmsh.vts  b2bmsh_coarse.vts  b2bmsh_finest.vts  gridsbuilders.h  tests_b2bsolver.cpp  tests_biflux.cpp  tests_burgereq.cpp  tests_curvaturesolver.cpp  tests_datastorage.cpp  tests_diff.cpp  tests_equations.cpp  tests_euler1D.cpp  tests_euler2D.cpp  tests_grid2D.cpp  tests_mesh.cpp  tests_solver_eq.cpp  tests_turbine.cpp  tests_vectorization.cpp  tests_visu.cpp
yams-cli/: CMakeLists.txt
yams-cli/src/: yams.cpp
