[metadata]
name = pyams
version = attr: pyams._version.__version__
description = YAMS aerodynamic solver
long_description = Python bindings of YAMS aerodynamic solver
long_description_content_type = text/markdown
license_file = LICENSE
author = SSG-Aero
url = https://github.com/ssg-aero/yams
platforms = Windows, Linux, Mac OS X
keywords = yams, gbs

[options]
include_package_data = True
packages = find:
python_requires = >=3.7